[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Header.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileBoard.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameOverPopup.gd" type="Script" id=4]

[node name="Game" type="MarginContainer"]
margin_right = 450.0
margin_bottom = 420.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="Layout" type="VBoxContainer" parent="."]
margin_right = 450.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1

[node name="Header" parent="Layout" instance=ExtResource( 2 )]
margin_bottom = 46.0

[node name="TileBoard" parent="Layout" instance=ExtResource( 3 )]
margin_top = 47.0
size_flags_stretch_ratio = 8.0

[node name="Overlay" type="CenterContainer" parent="."]
margin_right = 450.0
margin_bottom = 420.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameOverPopup" type="AcceptDialog" parent="Overlay"]
margin_left = 179.0
margin_top = 181.0
margin_right = 270.0
margin_bottom = 239.0
size_flags_horizontal = 0
size_flags_vertical = 0
dialog_text = "Placeholder"
script = ExtResource( 4 )
[connection signal="difficulty_changed" from="Layout/Header" to="." method="_on_Header_difficulty_changed"]
[connection signal="reset_button_pressed" from="Layout/Header" to="." method="_on_Header_reset_button_pressed"]
[connection signal="game_over" from="Layout/TileBoard" to="." method="_on_TileBoard_game_over"]
[connection signal="tile_clicked" from="Layout/TileBoard" to="." method="_on_TileBoard_tile_clicked"]
